# DracEngine

./: .gitignore  BuildAllTools.bat  BuildAllTools.sh  InstallDeps.bat  InstallDeps.sh  Launch-OpenGL.bat  Launch-Vulkan.bat  README.md
Tools/: CMakeLists.txt  InstallTools.sh
Tools/RyBuild/: CMakeLists.txt  CMakeLists.txt.bak
Tools/RyBuild/Platform/Include/Linux/Python/: pyconfig.h
Tools/RyBuild/Platform/Include/OSX/Python/: pyconfig.h
Tools/RyBuild/Platform/Include/Windows/clang/: INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/clang/AST/: ClangAbstractBasicWriter.vcxproj.filters  ClangAbstractTypeWriter.vcxproj.filters  ClangAttrClasses.vcxproj.filters  ClangAttrImpl.vcxproj.filters  ClangAttrTextDump.vcxproj.filters  ClangAttrTraverse.vcxproj.filters  ClangCommentHTMLTags.vcxproj.filters  ClangCommentHTMLTagsProperties.vcxproj.filters  ClangCommentNodes.vcxproj.filters  ClangDeclNodes.vcxproj.filters  INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters  StmtDataCollectors.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/clang/Basic/: ClangARMCdeBuiltinsDef.vcxproj.filters  ClangARMFP16.vcxproj.filters  ClangARMMveBuiltinAliases.vcxproj.filters  ClangAttrSubjectMatchRuleList.vcxproj.filters  ClangDiagnosticAnalysis.vcxproj.filters  ClangDiagnosticComment.vcxproj.filters  ClangDiagnosticDriver.vcxproj.filters  ClangDiagnosticIndexName.vcxproj.filters  ClangDiagnosticLex.vcxproj.filters  ClangDiagnosticSema.vcxproj.filters  INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/clang/Driver/: PACKAGE.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/clang/Parse/: ClangAttrSubMatchRulesParserStringSwitches.vcxproj.filters  INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/clang/Sema/: ClangAttrSpellingListIndex.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/clang/Serialization/: ClangAttrPCHRead.vcxproj.filters  ClangAttrPCHWrite.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/llvm/: INSTALL.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/llvm/Frontend/: INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/llvm/IR/: PACKAGE.vcxproj.filters
Tools/RyBuild/Platform/Include/Windows/llvm/Support/: INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters  llvm_vcsrevision_h.vcxproj.filters
Tools/RyBuild/Platform/Libraries/x64/Windows/MSVC/: LLVMDemangle.lib  LLVMProfileData.lib  LLVMTarget.lib  clangASTMatchers.lib  clangIndex.lib  clangLex.lib  python310.lib  python311.lib
Tools/RyBuild/Source/Implementation/: Entry.cpp
Tools/RyBuild/Source/Implementation/Generate/: GenerateGame.cpp  GenerateModule.cpp  Project.cpp  ProjectFileGenerator.cpp
Tools/RyBuild/Source/Implementation/Generate/VSCode/: VSCodeProjectFileGenerator.cpp
Tools/RyBuild/Source/Implementation/Generate/Windows/: VisualStudioProjectFileGenerator.cpp  WindowsProject.cpp  WindowsProjectSolution.cpp
Tools/RyBuild/Source/Implementation/Generate/Xcode/: XCodeProjectFileGenerator.cpp
Tools/RyBuild/Source/Implementation/Reflection/: Reflection.cpp
Tools/RyBuild/Source/Include/: Generator.cpp
Tools/RyBuild/Source/Include/Generate/: GenerateGame.h  GenerateModule.h  Project.h  ProjectFileGenerator.h
Tools/RyBuild/Source/Include/Generate/VSCode/: VSCodeProjectFileGenerator.h
Tools/RyBuild/Source/Include/Generate/Windows/: VisualStudioProjectFileGenerator.h  WindowsProject.h  WindowsProjectBase.h  WindowsProjectFolder.h  WindowsProjectSolution.h
Tools/RyBuild/Source/Include/Generate/Xcode/: XCodeProjectFileGenerator.h
Tools/RyBuild/Source/Include/Reflection/: Reflection.h
Tools/RyCommon/: CMakeLists.txt
Tools/RyCommon/Source/Implementation/: Common.cpp  LinuxPlatform.cpp  OSXPlatform.cpp  Platform.cpp  PosixPlatform.cpp  WindowsPlatform.cpp
Tools/RyCommon/Source/Implementation/Util/: Util.cpp
Tools/RyCommon/Source/Include/: Common.h  Platform.h  PlatformDetection.h
Tools/RyCommon/Source/Include/Util/: CommandBuilder.h  Util.h
Tools/RyDist/: CMakeLists.txt
Tools/RyDist/Source/Implementation/: Entry.cpp
Tools/RyLOC/: CMakeLists.txt
Tools/RyLOC/Source/Implementation/: Entry.cpp
Tools/RyReflect/: CMakeLists.txt
Tools/RyReflect/Include/: Reflection.h
Tools/RyReflect/Platform/Include/Linux/: pyconfig.h
Tools/RyReflect/Platform/Include/Linux/clang/Config/: config.h
Tools/RyReflect/Platform/Include/Linux/llvm/Config/: llvm-config.h
Tools/RyReflect/Platform/Include/OSX/clang/Config/: config.h
Tools/RyReflect/Platform/Include/OSX/clang/Driver/: Options.inc
Tools/RyReflect/Platform/Include/OSX/llvm/Config/: llvm-config.h
Tools/RyReflect/Platform/Include/Windows/clang/AST/: ClangAbstractBasicReader.vcxproj.filters  ClangAbstractTypeReader.vcxproj.filters  ClangAttrVisitor.vcxproj.filters  ClangCommentCommandInfo.vcxproj.filters  ClangCommentCommandList.vcxproj.filters  ClangCommentHTMLNamedCharacterReferences.vcxproj.filters  ClangStmtNodes.vcxproj.filters  ClangTypeNodes.vcxproj.filters
Tools/RyReflect/Platform/Include/Windows/clang/Basic/: ClangARMCdeBuiltinAliases.vcxproj.filters  ClangARMCdeBuiltinCG.vcxproj.filters  ClangARMCdeBuiltinSema.vcxproj.filters  ClangARMMveBuiltinCG.vcxproj.filters  ClangARMMveBuiltinSema.vcxproj.filters  ClangARMMveBuiltinsDef.vcxproj.filters  ClangARMNeon.vcxproj.filters  ClangARMSveBuiltinCG.vcxproj.filters  ClangARMSveBuiltins.vcxproj.filters  ClangARMSveSemaRangeChecks.vcxproj.filters  ClangARMSveTypeFlags.vcxproj.filters  ClangAttrHasAttributeImpl.vcxproj.filters  ClangAttrList.vcxproj.filters  ClangDiagnosticAST.vcxproj.filters  ClangDiagnosticCommon.vcxproj.filters  ClangDiagnosticCrossTU.vcxproj.filters  ClangDiagnosticFrontend.vcxproj.filters  (+6 more)
Tools/RyReflect/Platform/Include/Windows/llvm/: PACKAGE.vcxproj.filters
Tools/RyReflect/Source/: Reflection.cpp
Tools/RyReflect/Source/Implementation/: Reflection.cpp
Tools/Scripts/BatchFiles/: BuildClang-MSVC.bat  BuildPython-MSVC.bat
Tools/Scripts/Shell/: BuildClang-GCC.sh  BuildPython-GCC.sh
(+1301 files in other folders)
